--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "nodemailer": "^6.4.4",
     "twilio": "^3.39.5"
   }
 }
