--- a/config.env
+++ b/config.env
@@ -1,2 +1,3 @@
 TWILIO_AUTHID=ACfe21291fd2dcc6b18141ebe91e843c8b
 TWILIO_TOKEN=9d3a31b404673fdcd9b3b9ae95427a65
+SENDGRID_API_KEY=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
