--- a/config.env
+++ b/config.env
@@ -1,3 +1,4 @@
 TWILIO_AUTHID=ACfe21291fd2dcc6b18141ebe91e843c8b
 TWILIO_TOKEN=9d3a31b404673fdcd9b3b9ae95427a65
 SENDGRID_API_KEY=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
+mongo_db_connection_string = mongodb+srv://likhiahemangi:2712hemu@@cluster0-usl1p.mongodb.net/Airbnb?retryWrites=true&w=majority
